// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalProjectRow /> should render close collapse 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project1"
  in={false}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <Uncontrolled(Panel)
    className="panel-custom"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <h3>
        <a
          href="http://perdu.com"
          id="profile-project-link-project1"
          title="Perdu sur internet ?"
        >
          Perdu sur internet ?
        </a>
      </h3>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        id="profile-project-unfollow-button-project1"
        onClick={[Function]}
      >
        <FormattedMessage
          id="unfollow-this-project"
          values={Object {}}
        />
      </Button>
    </PanelHeading>
    <ListGroup
      bsClass="list-group"
      className="list-group-custom"
    />
  </Uncontrolled(Panel)>
</Collapse>
`;

exports[`<ProposalProjectRow /> should render the project 1 with his proposal displayed 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project1"
  in={true}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <Uncontrolled(Panel)
    className="panel-custom"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <h3>
        <a
          href="http://perdu.com"
          id="profile-project-link-project1"
          title="Perdu sur internet ?"
        >
          Perdu sur internet ?
        </a>
      </h3>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        id="profile-project-unfollow-button-project1"
        onClick={[Function]}
      >
        <FormattedMessage
          id="unfollow-this-project"
          values={Object {}}
        />
      </Button>
    </PanelHeading>
    <ListGroup
      bsClass="list-group"
      className="list-group-custom"
    >
      <ForwardRef(Relay(ProposalRow))
        key="0"
        proposal={
          Object {
            "id": "proposal1",
            "project": Object {
              "id": "project1",
            },
            "show_url": "http://carte.perdu.com",
            "title": "Une carte de l'internet",
          }
        }
      />
      <ForwardRef(Relay(ProposalRow))
        key="1"
        proposal={
          Object {
            "id": "proposal2",
            "project": Object {
              "id": "project1",
            },
            "show_url": "http://gps.perdu.com",
            "title": "Un GPS de l'internet",
          }
        }
      />
    </ListGroup>
  </Uncontrolled(Panel)>
</Collapse>
`;

exports[`<ProposalProjectRow /> should render the project 2 with his proposal displayed 1`] = `
<Collapse
  appear={false}
  dimension="height"
  getDimensionValue={[Function]}
  id="profile-project-collapse-project2"
  in={true}
  mountOnEnter={false}
  timeout={300}
  unmountOnExit={false}
>
  <Uncontrolled(Panel)
    className="panel-custom"
  >
    <PanelHeading
      bsClass="panel"
      componentClass="div"
    >
      <h3>
        <a
          href="http://theuselessweb.com"
          id="profile-project-link-project2"
          title="Se perdre sur internet"
        >
          Se perdre sur internet
        </a>
      </h3>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        disabled={false}
        id="profile-project-unfollow-button-project2"
        onClick={[Function]}
      >
        <FormattedMessage
          id="unfollow-this-project"
          values={Object {}}
        />
      </Button>
    </PanelHeading>
    <ListGroup
      bsClass="list-group"
      className="list-group-custom"
    >
      <ForwardRef(Relay(ProposalRow))
        key="0"
        proposal={
          Object {
            "id": "proposal3",
            "project": Object {
              "id": "project2",
            },
            "show_url": "https://randomstreetview.com/",
            "title": "Go  nowhere",
          }
        }
      />
    </ListGroup>
  </Uncontrolled(Panel)>
</Collapse>
`;
